wordpressMysql.yaml
apiVersion: v1
kind: Pod
metadata:
  name: wp
spec:
  containers:
  - name: wordpress
    image: wordpress:4.9-apache
    ports:
    - containerPort: 80
  - name: mysql
    image: mysql:5.7
    volumeMounts:
    - name: data
      mountPath: /var/lib/mysql
  volumes:
  - name: data
    emptyDir: {}
