wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
spec:
#  type: NodePort
  selector:
    app: wordpress
  ports:
    - port: 80
      targetPort: 80
#      nodePort: 30080
